# obs-source-study

build-dyn/: rundir-to-ui.bat
obs-studio/: CMakeLists.txt
obs-studio/UI/: obs-app.cpp  obs-app.hpp  platform-windows.cpp  properties-view.cpp  properties-view.hpp  qt-display.cpp  source-list-widget.cpp  visibility-item-widget.cpp  volume-control.cpp  window-basic-filters.cpp  window-basic-main-outputs.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-settings.cpp  window-basic-source-select.cpp  window-basic-transform.cpp  window-basic-transform.hpp  window-projector.cpp
obs-studio/UI/win-update/updater/: CMakeLists.txt
obs-studio/cmake/Modules/: ObsHelpers.cmake
obs-studio/libobs/: CMakeLists.txt  obs-audio-controls.c  obs-audio.c  obs-avc.c  obs-data.c  obs-defs.h  obs-display.c  obs-encoder.c  obs-encoder.h  obs-ffmpeg-compat.h  obs-interaction.h  obs-internal.h  obs-module.c  obs-output-delay.c  obs-output.c  obs-properties.c  obs-scene.c  obs-scene.h  obs-source.c  obs-source.h  obs-video.c  obs-view.c  obs-windows.c  obs.c  obs.h  obs.hpp
obs-studio/libobs-d3d11/: CMakeLists.txt  d3d11-duplicator.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp
obs-studio/libobs-opengl/: CMakeLists.txt
obs-studio/libobs/callback/: calldata.h  signal.c  signal.h
obs-studio/libobs/graphics/: axisang.c  axisang.h  bounds.h  device-exports.h  effect-parser.c  effect.c  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h  image-file.c  image-file.h  matrix3.h  matrix4.c  matrix4.h  quat.h  (+3 more)
(+65 files in other folders)
